
[workspace]
# members = ["packages/dom"]
# members = ["packages/blitz", "packages/dom", "packages/dioxus-blitz"]
# exclude = ["packages/blitz", "packages/dioxus-blitz"]
members = ["packages/blitz", "packages/dom", "packages/dioxus-blitz"]
resolver = "2"

[workspace.dependencies]
style = { git = "https://github.com/servo/stylo", rev = "6d01b59" }
style_config = { git = "https://github.com/servo/stylo", rev = "6d01b59" }
style_traits = { git = "https://github.com/servo/stylo", rev = "6d01b59" }
selectors = { git = "https://github.com/servo/stylo", rev = "6d01b59" }

taffy = { version = "0.4" }
dioxus = { git = "https://github.com/dioxuslabs/dioxus", rev = "9ae3d14" }
dioxus-ssr = { git = "https://github.com/dioxuslabs/dioxus", rev = "9ae3d14" }
tokio = { version = "1.25.0", features = ["full"] }
vello = { git = "https://github.com/linebender/vello", features = ["wgpu"], rev = "755fc5b" }
wgpu = "0.19"

# This is a "virtual package"
# It is not meant to be published, but is used so "cargo run --example XYZ" works properly
[package]
name = "blitz-examples"
version = "0.0.1"
authors = ["Jonathan Kelley"]
edition = "2021"
description = "Top level crate for Blitz"
license = "MIT OR Apache-2.0"
keywords = ["dom", "ui", "gui", "react", "wasm"]
rust-version = "1.60.0"
publish = false

# Need to force specific versions of these dependencies
[dependencies]
# webrender = "0.61.0"
euclid = { version = "0.22", features = ["serde"] }
# mozbuild = "0.1.0"

[dev-dependencies]
blitz = { path = "./packages/blitz" }
blitz-dom = { path = "./packages/dom" }
comrak = { version = "0.21.0", default-features = false }
dioxus-blitz = { path = "./packages/dioxus-blitz" }
dioxus = { workspace = true , features = ["desktop"] }
euclid = { version = "0.22", features = ["serde"] }
reqwest = "0.11.24"
tokio = { version = "1.36.0", features = ["full"] }
